@@ -1,7 +1,7 @@
 #define RUBY_VERSION "1.8.8"
-#define RUBY_RELEASE_DATE "2010-01-01"
+#define RUBY_RELEASE_DATE "2010-01-08"
 #define RUBY_VERSION_CODE 188
-#define RUBY_RELEASE_CODE 20100101
+#define RUBY_RELEASE_CODE 20100108
 #define RUBY_PATCHLEVEL -1
 
 #define RUBY_VERSION_MAJOR 1
@@ -9,7 +9,7 @@
 #define RUBY_VERSION_TEENY 8
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 1
+#define RUBY_RELEASE_DAY 8
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
